--- a/index.html
+++ b/index.html
@@ -45,5 +45,53 @@
             <img src="C:/Users/ACER/Documents/Trabajo_IHC/images/imagen_vitalco_1.png" alt="Salud y bienestar" class="content-img">
         </div>
     </section>
+    <section class="how-we-achieve">
+        <div class="achieve-container">
+            <div class="trophy-image">
+                <img src="C:/Users/ACER/Documents/Trabajo_IHC/images/trofeo.png" alt="Trophy Icon" class="trophy-img">
+            </div>
+            <div class="achieve-content">
+                <h2>¿Cómo lo logramos?</h2>
+                <ul>
+                    <li>Planes de Comidas según tus ingredientes o preferencias</li>
+                    <li>Seguimiento de tu caso con especialistas y foro en el cual podrás interactuar con más personas</li>
+                    <li>Monitorea tus signos vitales en tiempo real conectando tu reloj inteligente</li>
+                    <li>Recordatorios automáticos para tu comida y alertas cuando sea necesario</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="food-preferences">
+        <div class="preferences-container">
+            <div class="preferences-text">
+                <div class="celular-image">
+                    <img src="C:/Users/ACER/Documents/Trabajo_IHC/images/comida.png" alt="Mobile interface" class="celular-img">
+                </div>
+                <h2>Alimentos en base a tu preferencia</h2>
+                <p>VitalCo Solo Creará Comidas con los Alimentos que Selecciones</p>
+            </div>
+            <div class="preferences-images">
+                <div class="phone-image">
+                    <img src="C:/Users/ACER/Documents/Trabajo_IHC/images/imagen_vitalco_3.png" alt="Mobile interface" class="phone-img">
+                </div>
+            </div>
+        </div>
+    </section>    
+    <section class="segunda-opciones">
+        <div class="opciones-container">
+            <div class="opciones-images">
+                <div class="celular-image-0">
+                    <img src="C:/Users/ACER/Documents/Trabajo_IHC/images/imagen_vitalco_2.png" alt="Mobile interface" class="celular-img">
+                </div>
+            </div>
+            <div class="opciones-text">
+                <div class="celular-image-1">
+                    <img src="C:/Users/ACER/Documents/Trabajo_IHC/images/click.png" alt="Mobile interface" class="celular-img">
+                </div>
+                <h2>Fácil y variado</h2>
+                <p>Todas las recetas y comidas se ajustan a tu información, objetivo y cualquier configuración que desees</p>
+            </div>
+        </div>
+    </section>   
 </body>
 </html>
